Changes in version 1.1-3 (x/xx/2015) 
    * added is.robinson to recognize (pre) Robinson matrices.
    * Fixed Spectral_norm seriation.
    * hmap now honors zlim also in dendrogram-based maps. 
      hmap gained option sym for seriation based maps. showdist can now be 
      one of "none" (default), "row", "column", or "both". 
    * ser_cor and ser_dist gained parameter y. ser_cor gained parameter test
      to perform tests for association.
    * added permute method for hclust and dendrogram objects.

Changes in version 1.1-2 (8/23/2015) 
    * Argument (control and ...) check warns now instead of throwing an error.
    * seriation_dist, seriation_cor and seriation_align are now shortened to 
      ser_dist, ser_cor and ser_align.
    * method "ppc" is now faster and also available in ser_cor.
    * Fixed ser_cor for "spearman" and "Kendall" (uses now rank correctly).
    * ser_cor and ser_dist gained parameter reverse to indicate that
        permuations are also tried in reverse and the best value is reported.

Changes in version 1.1-1 (7/1/2015) 
    * get_permutation_matrix added.
    * seriation_dist measure "ppc" (positional proximity coefficient) added.
    * Fixed bug with permute and ser_permutation_vectors.
    * Identity permutations (NA) give now an error for get_order and
        get_permutation_matrix.
    * Fixed imports for non-base R packages.

Changes in version 1.1-0 (06/09/2015) 
    * Seriation method 'Identity' added.
    * Seriation method 'Random' added.
    * Seriation method 'VAT' added.
    * Seriation methods 'Spectral' and 'Spectral_norm' added.
    * Seriation methods 'PCA_angle' and 'MDS_angle' added.
    * Seriation methods 'SPIN_NH' and 'SPIN_STS' added.
    * Several aliases for seriation methods added.
    * Criterion 'RWGAR' added.
    * permutation_matrix2vector and permutation_vector2matrix added.
    * Identity permutation (value NA) added.
    * ser_permutation and ser_permutation_vector can now be used interchangably,