@@ -1,8 +1,11 @@
 Changes in version 1.1-3 (x/xx/2015) 
     * added is.robinson to recognize (pre) Robinson matrices.
+    * added random.robinson to create random Robinson matrices.
+    * added seriation methods "LS" and "2SUM" (QAP-based seriation).
+    * added criteria "LS" and "2SUM" from QAP-based seriation.
     * Fixed Spectral_norm seriation.
     * hmap now honors zlim also in dendrogram-based maps. 
-      hmap gained option sym for seriation based maps. showdist can now be 
+    * hmap gained option sym for seriation based maps. showdist can now be 
       one of "none" (default), "row", "column", or "both". 
     * ser_cor and ser_dist gained parameter y. ser_cor gained parameter test
       to perform tests for association.
